Bug 517064 - Spectacle crashes on exit (Segmentation fault in QMenu::~QMenu) on Plasma 6.6.2 Wayland
Summary: Spectacle crashes on exit (Segmentation fault in QMenu::~QMenu) on Plasma 6.6...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: HI crash
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: regression
: 517086 517099 517103 517113 517123 517131 517133 517194 517231 517242 517287 517312 517324 517336 517351 517399 517404 517405 517407 517447 517514 517529 517554 517562 517569 517594 517609 517617 517618 517622 517623 517642 517643 517663 517683 517691 517698 517699 517732 517794 517799 517809 517997 518080 518125 518197 518267 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-03-04 05:08 UTC by Freddie
Modified: 2026-03-28 18:08 UTC (History)
46 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Freddie 2026-03-04 05:08:39 UTC
warning: Can't open file /memfd:kwin-dmabuf-feedback-table (deleted) during file-backed mapping note processing
Program terminated with signal SIGSEGV, Segmentation fault.

Thread 1 (Thread 0x7fac9d36a740 (LWP 2628)):
[KCrash Handler]
#4  0x00007facb7bbd641 in ?? () from /usr/lib/libQt6Core.so.6
#5  0x00007facb7bcbc9c in ?? () from /usr/lib/libQt6Core.so.6
#6  0x00007facb7bd3691 in QObject::disconnectImpl(QObject const*, void**, QObject const*, void**, QMetaObject const*) () from /usr/lib/libQt6Core.so.6
#7  0x00007facbadcfdc8 in QWidgetAction::releaseWidget(QWidget*) () from /usr/lib/libQt6Widgets.so.6
#8  0x00007facbaf113ac in QMenu::~QMenu() () from /usr/lib/libQt6Widgets.so.6
#9  0x000055b4f195750c in ?? ()
#10 0x00007facb7bd8f0f in ?? () from /usr/lib/libQt6Core.so.6
#11 0x00007facb7bc5331 in QObject::~QObject() () from /usr/lib/libQt6Core.so.6
#12 0x000055b4f199edd5 in ?? ()
#13 0x00007facb7bbe5c2 in QObjectPrivate::deleteChildren() () from /usr/lib/libQt6Core.so.6
#14 0x00007facb7bc52be in QObject::~QObject() () from /usr/lib/libQt6Core.so.6
Comment 1 Akseli Lahtinen 2026-03-04 09:32:40 UTC
Can confirm it crashes occasionally. Maybe bug with the SNI?

#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=11, no_tid=no_tid@entry=0) at pthread_kill.c:44
44            return INTERNAL_SYSCALL_ERROR_P (ret) ? INTERNAL_SYSCALL_ERRNO (ret) : 0;
[Current thread is 1 (Thread 0x7f2c4514b740 (LWP 40391))]
(gdb) bt
#0  __pthread_kill_implementation
    (threadid=<optimized out>, signo=signo@entry=11, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x00007f2c5f7abaf3 in __pthread_kill_internal
    (threadid=<optimized out>, signo=11) at pthread_kill.c:89
#2  0x00007f2c5f7511a0 in __GI_raise (sig=11)
    at ../sysdeps/posix/raise.c:26
#3  0x00007f2c6380ae65 in KCrash::defaultCrashHandler (sig=11)
    at /usr/src/debug/kde-banana-kcrash-git/kcrash/src/kcrash.cpp:623
#4  0x00007f2c5f7512d0 in <signal handler called> ()
    at /usr/lib/libc.so.6
#5  __memcpy_avx_unaligned_erms ()
    at ../sysdeps/x86_64/multiarch/memmove-vec-unaligned-erms.S:461
#6  0x00007f2c62b8bfd3 in memcpy
    (__dest=<optimized out>, __src=0x563c3c9ef3e0, __len=<optimized out>) at /usr/include/bits/string_fortified.h:29
#7  QtPrivate::QPodArrayOps<QWidget*>::copyAppend
    (this=<synthetic pointer>, b=0x563c3c9ef3e0, e=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qarraydataops.h:51
#8  QtPrivate::QPodArrayOps<QWidget*>::copyAppend
    (this=<synthetic pointer>, b=0x563c3c9ef3e0, e=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qarraydataops.h:41
#9  QArrayDataPointer<QWidget*>::reallocateAndGrow
    (this=0x7f2c5f8fac80 <main_arena+448>, where=<optimized out>, n=0, old=0x0)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qarraydatapointer.h:241
#10 0x00007f2c62bfefa5 in QArrayDataPointer<QWidget*>::detach
    (old=0x0, this=0x7f2c5f8fac80 <main_arena+448>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qarraydatapointer.h:145
#11 QArrayDataPointer<QWidget*>::detach
    (old=0x0, this=0x7f2c5f8fac80 <main_arena+448>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qarraydatapointer.h:142
#12 QList<QWidget*>::detach (this=0x7f2c5f8fac80 <main_arena+448>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qlist.h:490
#13 QList<QWidget*>::end (this=0x7f2c5f8fac80 <main_arena+448>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qlist.h:695
#14 QtPrivate::sequential_erase_if<QList<QWidget*>, QtPrivate::sequential_erase<QList<QWidget*>, QWidget*>(QList<QWidget*>&, QWidget* const&)::{lambda(auto:1 const&)#1}>(QList<QWidget*>&, QtPrivate::sequential_erase<QList<QWidget*>, QWidget*>(QList<QWidget*>&, QWidget* const&)::{lambda(auto:1 const&)#1}&) [clone .isra.0]
    (c=..., pred=...)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qcontainertools_impl.h:350
#15 0x00007f2c62c5bde5 in QtPrivate::sequential_erase<QList<QWidget*>, QWidget*> (c=..., t=@0x7fffdd884050: 0x563c3cbf3aa0)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qcontainertools_impl.h:376
#16 QtPrivate::sequential_erase_with_copy<QList<QWidget*>, QWidget*> (c=..., t=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qcontainertools_impl.h:383
#17 QList<QWidget*>::removeAll<QWidget*>
    (t=<synthetic pointer>: <optimized out>, this=0x7f2c5f8fac80 <main_arena+448>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/tools/qlist.h:663
#18 QWidgetAction::releaseWidget
    (this=0x563c3cbf3b10, widget=0x563c3cbf3aa0)
    at /usr/src/debug/qt6-base/qtbase/src/widgets/kernel/qwidgetaction.cpp:183
#19 0x00007f2c62d9d3ac in QMenu::~QMenu
--Type <RET> for more, q to quit, c to continue without paging--c
    (this=0x563c3cbf3130, this=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase/src/widgets/widgets/qmenu.cpp:1782
#20 0x0000563c19f2019c in SpectacleMenu::~SpectacleMenu
    (this=0x563c3cbf3130, this=<optimized out>)
    at /usr/src/debug/kde-banana-spectacle-git/spectacle/src/Gui/SpectacleMenu.h:14
#21 OptionsMenu::~OptionsMenu
    (this=0x563c3cbf3130, this=<optimized out>)
    at /usr/src/debug/kde-banana-spectacle-git/spectacle/src/Gui/OptionsMenu.h:19
#22 OptionsMenu::~OptionsMenu
    (this=0x563c3cbf3130, this=<optimized out>)
    at /usr/src/debug/kde-banana-spectacle-git/spectacle/src/Gui/OptionsMenu.h:19
#23 0x00007f2c5febbf0f in QtPrivate::QSlotObjectBase::call
    (this=0x563c3c9d6d40, r=0x563c3cbf3130, a=0x7fffdd884240, this=<optimized out>, r=<optimized out>, a=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobjectdefs_impl.h:461
#24 doActivate<false>
    (sender=<optimized out>, signal_index=<optimized out>, argv=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:4272
#25 0x00007f2c5fea8331 in QMetaObject::activate<void, QObject*>
    (sender=0x7f2c40009ba0, mo=<optimized out>, local_signal_index=0, ret=0x0)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobjectdefs.h:319
#26 QObject::destroyed (this=0x7f2c40009ba0, _t1=0x7f2c40009ba0)
    at /usr/src/debug/qt6-base/build/src/corelib/kernel/moc_qobject.cpp:186
#27 QObject::~QObject (this=0x7f2c40009ba0, this=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:1024
#28 0x0000563c19f61255 in SpectacleCore::~SpectacleCore
    (this=0x7f2c40009ba0, this=<optimized out>)
    at /usr/src/debug/kde-banana-spectacle-git/spectacle/src/SpectacleCore.cpp:794
#29 0x00007f2c5fea15c2 in QObjectPrivate::deleteChildren
    (this=this@entry=0x563c3c0f2a90)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:2212
#30 0x00007f2c5fea82be in QObject::~QObject
    (this=<optimized out>, this=<optimized out>)
    at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:1122
#31 0x0000563c19ed3e10 in main
    (argc=<optimized out>, argv=<optimized out>)
    at /usr/src/debug/kde-banana-spectacle-git/spectacle/src/Main.cpp:141


Operating System: KDE Linux 2026-03-04
KDE Plasma Version: 6.6.80
KDE Frameworks Version: 6.24.0
Qt Version: 6.10.2
Kernel Version: 6.18.13-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 16 GiB of RAM (15.5 GiB usable)
Graphics Processor: AMD Radeon RX 6600
Comment 2 Antonio Rojas 2026-03-04 15:22:49 UTC
*** Bug 517086 has been marked as a duplicate of this bug. ***
Comment 3 Antonio Rojas 2026-03-04 21:04:19 UTC
*** Bug 517099 has been marked as a duplicate of this bug. ***
Comment 4 Antonio Rojas 2026-03-04 21:04:35 UTC
*** Bug 517103 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2026-03-04 22:04:50 UTC
Looks like this will be fixed by https://invent.kde.org/plasma/spectacle/-/merge_requests/516.
Comment 6 Antonio Rojas 2026-03-05 06:39:45 UTC
*** Bug 517113 has been marked as a duplicate of this bug. ***
Comment 7 Antonio Rojas 2026-03-05 06:41:08 UTC
*** Bug 517123 has been marked as a duplicate of this bug. ***
Comment 8 Antonio Rojas 2026-03-05 11:26:00 UTC
*** Bug 517131 has been marked as a duplicate of this bug. ***
Comment 9 Antonio Rojas 2026-03-05 12:15:59 UTC
*** Bug 517133 has been marked as a duplicate of this bug. ***
Comment 10 Noah Davis 2026-03-05 18:05:12 UTC
Git commit 3dff870b1628c29a0bbbab0fa44ebd0515769524 by Noah Davis.
Committed on 05/03/2026 at 18:04.
Pushed by ndavis into branch 'master'.

Fix crash on quit with a quickly selected region

If you quickly selected a region and quickly pressed escape to quit, it could cause a crash.

FIXED-IN: 6.6.3

M  +15   -6    src/Gui/ExportMenu.cpp
M  +1    -0    src/Gui/ExportMenu.h
M  +15   -6    src/Gui/HelpMenu.cpp
M  +1    -0    src/Gui/HelpMenu.h
M  +15   -6    src/Gui/OptionsMenu.cpp
M  +1    -0    src/Gui/OptionsMenu.h
M  +15   -6    src/Gui/RecordingModeMenu.cpp
M  +1    -0    src/Gui/RecordingModeMenu.h
M  +15   -6    src/Gui/ScreenshotModeMenu.cpp
M  +1    -0    src/Gui/ScreenshotModeMenu.h

https://invent.kde.org/plasma/spectacle/-/commit/3dff870b1628c29a0bbbab0fa44ebd0515769524
Comment 11 Noah Davis 2026-03-05 18:05:28 UTC
Git commit e5f1a6ef499d4569db8dc2ddd0a282caa6cf7c60 by Noah Davis.
Committed on 05/03/2026 at 18:05.
Pushed by ndavis into branch 'Plasma/6.6'.

Fix crash on quit with a quickly selected region

If you quickly selected a region and quickly pressed escape to quit, it could cause a crash.

FIXED-IN: 6.6.3


(cherry picked from commit 3dff870b1628c29a0bbbab0fa44ebd0515769524)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +15   -6    src/Gui/ExportMenu.cpp
M  +1    -0    src/Gui/ExportMenu.h
M  +15   -6    src/Gui/HelpMenu.cpp
M  +1    -0    src/Gui/HelpMenu.h
M  +15   -6    src/Gui/OptionsMenu.cpp
M  +1    -0    src/Gui/OptionsMenu.h
M  +15   -6    src/Gui/RecordingModeMenu.cpp
M  +1    -0    src/Gui/RecordingModeMenu.h
M  +15   -6    src/Gui/ScreenshotModeMenu.cpp
M  +1    -0    src/Gui/ScreenshotModeMenu.h

https://invent.kde.org/plasma/spectacle/-/commit/e5f1a6ef499d4569db8dc2ddd0a282caa6cf7c60
Comment 12 Antonio Rojas 2026-03-06 14:28:24 UTC
*** Bug 517194 has been marked as a duplicate of this bug. ***
Comment 13 Antonio Rojas 2026-03-07 09:34:01 UTC
*** Bug 517231 has been marked as a duplicate of this bug. ***
Comment 14 Antonio Rojas 2026-03-07 15:22:18 UTC
*** Bug 517242 has been marked as a duplicate of this bug. ***
Comment 15 Antonio Rojas 2026-03-08 16:46:48 UTC
*** Bug 517287 has been marked as a duplicate of this bug. ***
Comment 16 Antonio Rojas 2026-03-08 21:47:22 UTC
*** Bug 517312 has been marked as a duplicate of this bug. ***
Comment 17 Antonio Rojas 2026-03-09 08:50:50 UTC
*** Bug 517324 has been marked as a duplicate of this bug. ***
Comment 18 Antonio Rojas 2026-03-09 10:50:35 UTC
*** Bug 517336 has been marked as a duplicate of this bug. ***
Comment 19 Antonio Rojas 2026-03-09 21:49:13 UTC
*** Bug 517351 has been marked as a duplicate of this bug. ***
Comment 20 Filip 2026-03-10 21:04:32 UTC
*** Bug 517399 has been marked as a duplicate of this bug. ***
Comment 21 Antonio Rojas 2026-03-10 22:53:09 UTC
*** Bug 517404 has been marked as a duplicate of this bug. ***
Comment 22 Antonio Rojas 2026-03-10 23:29:01 UTC
*** Bug 517405 has been marked as a duplicate of this bug. ***
Comment 23 Filip 2026-03-11 06:01:26 UTC
*** Bug 517407 has been marked as a duplicate of this bug. ***
Comment 24 Filip 2026-03-11 20:40:50 UTC
*** Bug 517447 has been marked as a duplicate of this bug. ***
Comment 25 Filip 2026-03-13 15:19:20 UTC
*** Bug 517514 has been marked as a duplicate of this bug. ***
Comment 26 Filip 2026-03-14 07:22:16 UTC
*** Bug 517529 has been marked as a duplicate of this bug. ***
Comment 27 Filip 2026-03-14 15:04:19 UTC
*** Bug 517554 has been marked as a duplicate of this bug. ***
Comment 28 Antonio Rojas 2026-03-14 16:41:17 UTC
*** Bug 517562 has been marked as a duplicate of this bug. ***
Comment 29 Antonio Rojas 2026-03-14 18:05:20 UTC
*** Bug 517569 has been marked as a duplicate of this bug. ***
Comment 30 Antonio Rojas 2026-03-15 12:01:52 UTC
*** Bug 517594 has been marked as a duplicate of this bug. ***
Comment 31 Filip 2026-03-15 15:17:10 UTC
*** Bug 517609 has been marked as a duplicate of this bug. ***
Comment 32 postix 2026-03-15 18:46:43 UTC
*** Bug 517617 has been marked as a duplicate of this bug. ***
Comment 33 Antonio Rojas 2026-03-15 19:37:40 UTC
*** Bug 517618 has been marked as a duplicate of this bug. ***
Comment 34 Filip 2026-03-15 20:05:52 UTC
*** Bug 517622 has been marked as a duplicate of this bug. ***
Comment 35 Filip 2026-03-15 20:45:23 UTC
*** Bug 517623 has been marked as a duplicate of this bug. ***
Comment 36 Akseli Lahtinen 2026-03-16 11:03:07 UTC
*** Bug 517642 has been marked as a duplicate of this bug. ***
Comment 37 Antonio Rojas 2026-03-16 12:52:32 UTC
*** Bug 517643 has been marked as a duplicate of this bug. ***
Comment 38 Antonio Rojas 2026-03-16 19:20:15 UTC
*** Bug 517663 has been marked as a duplicate of this bug. ***
Comment 39 Antonio Rojas 2026-03-17 09:26:45 UTC
*** Bug 517683 has been marked as a duplicate of this bug. ***
Comment 40 Antonio Rojas 2026-03-17 12:03:29 UTC
*** Bug 517691 has been marked as a duplicate of this bug. ***
Comment 41 Filip 2026-03-17 16:37:19 UTC
*** Bug 517698 has been marked as a duplicate of this bug. ***
Comment 42 Filip 2026-03-17 16:37:49 UTC
*** Bug 517699 has been marked as a duplicate of this bug. ***
Comment 43 Antonio Rojas 2026-03-18 08:10:54 UTC
*** Bug 517732 has been marked as a duplicate of this bug. ***
Comment 44 Antonio Rojas 2026-03-18 20:32:34 UTC
*** Bug 517794 has been marked as a duplicate of this bug. ***
Comment 45 Antonio Rojas 2026-03-18 21:26:54 UTC
*** Bug 517799 has been marked as a duplicate of this bug. ***
Comment 46 Antonio Rojas 2026-03-19 07:04:29 UTC
*** Bug 517809 has been marked as a duplicate of this bug. ***
Comment 47 Antonio Rojas 2026-03-22 16:21:45 UTC
*** Bug 517997 has been marked as a duplicate of this bug. ***
Comment 48 Antonio Rojas 2026-03-24 11:12:05 UTC
*** Bug 518080 has been marked as a duplicate of this bug. ***
Comment 49 Antonio Rojas 2026-03-25 11:03:42 UTC
*** Bug 518125 has been marked as a duplicate of this bug. ***
Comment 50 Antonio Rojas 2026-03-27 07:09:54 UTC
*** Bug 518197 has been marked as a duplicate of this bug. ***
Comment 51 Antonio Rojas 2026-03-28 18:08:28 UTC
*** Bug 518267 has been marked as a duplicate of this bug. ***