Fix crash on quit with a quickly selected region

If you quickly selected a region and quickly pressed escape to quit, it could cause a crash.

BUG: 517064

FIXED-IN: 6.6.3