src/Gui/ScreenshotModeMenu.cpp
@@ -10,7 +10,7 @@
 
 using namespace Qt::StringLiterals;
 
-static std::unique_ptr<ScreenshotModeMenu> s_instance = nullptr;
+static ScreenshotModeMenu *s_instance = nullptr;
 
 ScreenshotModeMenu::ScreenshotModeMenu(QWidget *parent)
     : SpectacleMenu(i18nc("@title:menu", "Screenshot Modes"), parent)
@@ -63,16 +63,25 @@ ScreenshotModeMenu::ScreenshotModeMenu(QWidget *parent)
     connect(CaptureModeModel::instance(), &CaptureModeModel::captureModesChanged, this, addModes);
 }
 
+ScreenshotModeMenu::~ScreenshotModeMenu()
+{
+    s_instance = nullptr;
+}
+
 ScreenshotModeMenu *ScreenshotModeMenu::instance()
 {
     if (!s_instance && SpectacleCore::instance()) {
-        s_instance = std::unique_ptr<ScreenshotModeMenu>(new ScreenshotModeMenu);
-        // We have to destroy this after SpectacleCore to prevent a crash from the Qt Quick UI.
-        connect(SpectacleCore::instance(), &QObject::destroyed, s_instance.get(), [] {
-            s_instance.reset();
+        s_instance = new ScreenshotModeMenu;
+        // We have to destroy this after SpectacleCore to ensure that destructors
+        // are called. We don't just rely on smart pointers because they won't delete
+        // the menus at the right time and cause a crash while quitting.
+        connect(SpectacleCore::instance(), &QObject::destroyed, qApp, [] {
+            if (s_instance) {
+                delete s_instance;
+            }
         });
     }
-    return s_instance.get();
+    return s_instance;
 }
 
 #include "moc_ScreenshotModeMenu.cpp"
